On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   chip-490-crud.html

--- a/chip-490-crud.html
+++ b/chip-490-crud.html
@@ -1,6 +1,7 @@
 <script 
   src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js">
 </script>
+<script>"./script.js"</script>
 
 <button onclick="deleteMarty();">Delete a Marty!</button>
 <button onclick="showMcFlies();">Show McFlies!</button>
