On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   chip-490-crud.html

--- a/chip-490-crud.html
+++ b/chip-490-crud.html
@@ -1,8 +1,11 @@
-<script 
-  src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js">
-</script>
-<script>"./script.js"</script>
-
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script 
+    src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js">
+  </script>
+  <script src="script.js">
+  </script>
+</head>
 <button onclick="deleteMarty();">Delete a Marty!</button>
 <button onclick="showMcFlies();">Show McFlies!</button>
 <button onclick="updateMartyMcFly();">Update Marty!</button>
