--- a/chip-490-crud.html
+++ b/chip-490-crud.html
@@ -1,5 +1,5 @@
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"> </script>
   <script 
     src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js">
   </script>
