--- a/chip-490-crud.html
+++ b/chip-490-crud.html
@@ -5,9 +5,33 @@
   </script>
   <script src="script.js">
   </script>
+  <script src="other_script.js"></script>
 </head>
+
+<body onload="startTime()">
+
+  <pre id='pre'></pre>
+
+  <div id="txt"></div>
+
+  
 <button onclick="deleteMarty();">Delete a Marty!</button>
 <button onclick="showMcFlies();">Show McFlies!</button>
 <button onclick="updateMartyMcFly();">Update Marty!</button>
 <button onclick="addMartyMcFly();">Add Marty!</button>
+
+  <table id="table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Birth Date</th>
+        <th>Year</th>
+      </tr>
+    </thead>
+    <tbody id="patients">
+
+    </tbody>
+  </table>
 
