--- a/crud_v2.html
+++ b/crud_v2.html
@@ -3,24 +3,30 @@
   <script 
     src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js">
   </script>
-  <script src="other_script.js"></script>
+  <script src="./scripts/script_dr.js"></script>
+  <script src="./scripts/clock.js"></script>
 </head>
 
-<button onclick="deletePractitioner();">Delete a Practitioner!</button>
-<button onclick="showPractitioners();">Show Practitioner!</button>
-<button onclick="updateDoctor();">Update Practitioner!</button>
-<button onclick="addDoctor();">Add Practitioner!</button>
+<tbody onload="startTime()">
+  <pre id='pre'></pre>
 
-  <table id="table">
+  <div id="txt"></div>
+
+  <button onclick="showPractitioners();">Search Practitioner</button>
+  <button onclick="addPractitioner();">Add Practitioner</button>
+  <hr />
+  <table>
     <thead>
-      <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Birth Date</th>
-      </tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>actions</th>
     </thead>
-    <tbody id="practitioners">
-
+    <tbody id="practitionerResults">
+      
     </tbody>
   </table>
+
+
+  
+</tbody>
+ 
