--- a/crud_pt.html
+++ b/crud_pt.html
@@ -12,17 +12,21 @@
 
   <div id="txt"></div>
 
-<button onclick="showPractitioners();">Search Practitioners</button>
-<button onclick="addPractitioner();">Add Practitioner</button>
-<hr />
-<table>
-  <thead>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>actions</th>
-  </thead>
-  <tbody id="practitionerResults">
-    
-  </tbody>
-</table>
+  <button onclick="showPractitioners();">Search Practitioner</button>
+  <button onclick="addPractitioner();">Add Practitioner</button>
+  <hr />
+  <table>
+    <thead>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>actions</th>
+    </thead>
+    <tbody id="practitionerResults">
+      
+    </tbody>
+  </table>
 
+
+  
+</tbody>
+ 
