On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   assets/css/main.css
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,48 +1,81 @@
 ---
 layout: default
-title: Paul Greenwood - Software Developer
+title: Paul Greenwood - Senior Solutions Engineer
 ---
 
 <section class="hero">
     <h1>Paul Greenwood</h1>
-    <p>Software developer specializing in web development and full-stack applications. Passionate about creating efficient and user-friendly solutions.</p>
+    <p>Senior Solutions Engineer specializing in enterprise architecture, technical leadership, and complex system integrations. Passionate about delivering scalable solutions that drive business value.</p>
 </section>
 
 <section id="skills" class="skills">
     <div class="skill-card">
-        <h3><i class="fas fa-code"></i> Full-stack Development</h3>
-        <p>Building robust and scalable applications using modern technologies.</p>
+        <h3><i class="fas fa-archway"></i> Enterprise Architecture</h3>
+        <p>Designing scalable, secure, and maintainable enterprise solutions that align with business objectives.</p>
     </div>
     <div class="skill-card">
-        <h3><i class="fas fa-globe"></i> Web Development</h3>
-        <p>Creating responsive and interactive web experiences.</p>
+        <h3><i class="fas fa-users-cog"></i> Technical Leadership</h3>
+        <p>Leading cross-functional teams in delivering complex technical solutions and mentoring junior engineers.</p>
     </div>
     <div class="skill-card">
-        <h3><i class="fab fa-js"></i> JavaScript/TypeScript</h3>
-        <p>Expert in modern JavaScript frameworks and TypeScript development.</p>
+        <h3><i class="fas fa-project-diagram"></i> System Integration</h3>
+        <p>Architecting seamless integrations between diverse systems and third-party services.</p>
     </div>
     <div class="skill-card">
-        <h3><i class="fab fa-react"></i> React</h3>
-        <p>Building dynamic user interfaces with React and related technologies.</p>
+        <h3><i class="fas fa-code-branch"></i> Full-stack Development</h3>
+        <p>Building robust applications using modern technologies and best practices.</p>
     </div>
     <div class="skill-card">
-        <h3><i class="fas fa-database"></i> Database Design</h3>
-        <p>Designing efficient database structures and optimizing queries.</p>
+        <h3><i class="fas fa-comments"></i> Technical Consulting</h3>
+        <p>Providing expert guidance on technology selection, architecture decisions, and implementation strategies.</p>
     </div>
     <div class="skill-card">
-        <h3><i class="fas fa-plug"></i> API Development</h3>
-        <p>Creating RESTful APIs and integrating third-party services.</p>
+        <h3><i class="fas fa-chart-line"></i> Solution Design</h3>
+        <p>Creating comprehensive technical solutions that address complex business challenges.</p>
+    </div>
+</section>
+
+<section id="expertise" class="expertise">
+    <h2>Areas of Expertise</h2>
+    <div class="expertise-grid">
+        <div class="expertise-card">
+            <h3>Enterprise Solutions</h3>
+            <ul>
+                <li>System Architecture Design</li>
+                <li>Cloud Infrastructure</li>
+                <li>Security & Compliance</li>
+                <li>Performance Optimization</li>
+            </ul>
+        </div>
+        <div class="expertise-card">
+            <h3>Technical Leadership</h3>
+            <ul>
+                <li>Team Mentoring</li>
+                <li>Code Reviews</li>
+                <li>Best Practices</li>
+                <li>Technical Documentation</li>
+            </ul>
+        </div>
+        <div class="expertise-card">
+            <h3>Integration & APIs</h3>
+            <ul>
+                <li>RESTful APIs</li>
+                <li>Microservices</li>
+                <li>Third-party Integrations</li>
+                <li>Data Migration</li>
+            </ul>
+        </div>
     </div>
 </section>
 
 <section id="projects" class="projects">
-    <h2>Featured Projects</h2>
-    <p>Check out my latest work and contributions.</p>
+    <h2>Featured Solutions</h2>
+    <p>Explore my portfolio of enterprise solutions and technical implementations.</p>
     <div class="project-grid">
         <a href="/all_repos" class="project-card">
             <div class="project-content">
                 <h3>View All Projects</h3>
-                <p>Explore my complete portfolio of projects and contributions.</p>
+                <p>Discover my complete portfolio of enterprise solutions and technical contributions.</p>
             </div>
         </a>
     </div>
@@ -54,23 +87,23 @@ title: Paul Greenwood - Software Developer
         <a href="https://github.com/poglesbyg" target="_blank" rel="noopener" class="contact-card">
             <i class="fab fa-github"></i>
             <h3>GitHub</h3>
-            <p>Check out my code and contributions</p>
+            <p>Review my technical contributions</p>
         </a>
         <a href="https://www.linkedin.com/in/poglesbyg/" target="_blank" rel="noopener" class="contact-card">
             <i class="fab fa-linkedin"></i>
             <h3>LinkedIn</h3>
-            <p>Connect with me professionally</p>
+            <p>Connect for opportunities</p>
         </a>
         <a href="mailto:pogrant@alumni.unc.edu" class="contact-card">
             <i class="fas fa-envelope"></i>
             <h3>Email</h3>
-            <p>Send me a message</p>
+            <p>Discuss potential roles</p>
         </a>
     </div>
 </section>
 
 <section id="opportunities" class="opportunities">
     <h2>Looking For</h2>
-    <p>I'm currently seeking opportunities in software development roles where I can contribute to meaningful projects and continue growing as a developer.</p>
+    <p>I'm seeking Senior Solutions Engineer roles where I can leverage my technical expertise and leadership experience to drive impactful solutions and mentor teams.</p>
     <a href="mailto:pogrant@alumni.unc.edu" class="cta-button">Let's Connect</a>
 </section> 
